[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "graphiq"
version = "0.0.9"
requires-python = "3.8, 3.9, 3.10"
dependencies = [
    "numpy",
    "networkx",
    "matplotlib",
    "tqdm",
    "seaborn",
    "scipy",
    "flask",
    "pandas",
#    "psutil",
]
readme = "README.md"
keywords = ["quantum", "photonic", "circuit", "design"]
license = {text = "Apache 2.0"}

authors = [
    {name = "Benjamin MacLellan", email = "benjamin@ki3photonics.com"},
    {name = "Jie Lin", email = "jie.lin@quantumbridgetech.com"},
    {name = "Sohban Ghanbari", email = "sobhan.ghanbari@quantumbridgetech.com"},
    {name = "Luc Robichaud", email = "luc.robichaud@qubridge.io"},
    {name = "Piotr Roztocki", email = "piotr@ki3photonics.com"},
]
classifiers = [
  # How mature is this project? Common values are
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research ",
  "Scientific/Engineering :: Quantum Information :: Simulation Tools",
  "Scientific/Engineering :: Quantum Information :: Optimization Tools",
  "Scientific/Engineering :: Quantum Technologies :: Photonics",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: Apache 2.0",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
docs = ["pymdown-extensions", "mkdocstrings", "mkdocs-material", "mkdocstrings-python", "mkdocs-jupyter"]
all = ["pymdown-extensions", "mkdocstrings", "mkdocs-material", "mkdocstrings-python", "mkdocs-jupyter", "jax", "optax", "ray"]

[project.urls]
Homepage = "https://github.com/graphiq-dev/graphiq"
Documentation = "https://graphiq.readthedocs.io/en/latest/"
Repository = "https://github.com/graphiq-dev/graphiq.git"
Issues = "https://github.com/graphiq-dev/graphiq/issues"

