[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "graphiq"
version = "0.1.00"

requires-python = ">3.8, <4"
dependencies = [
    "numpy~=1.26.4",
    "networkx~=3.3",
    "matplotlib~=3.9.0",
    "scipy~=1.14.0",
    "tqdm",
    "seaborn",
    "scipy",
    "flask~=2.2.2",
    "pandas",
    "psutil",
    "py-cpuinfo",
#    "qiskit",
    "qiskit ~= 0.38.0",
    "pylatexenc"
]
description = "  GraphiQ is a Python library for the simulation, design, and optimization of quantum photonic circuits."
readme = "README.md"
keywords = ["quantum", "photonic", "circuit", "design"]
license = {text = "Apache 2.0"}

authors = [
    {name = "Benjamin MacLellan", email = "benjamin@ki3photonics.com"},
    {name = "Jie Lin", email = "jie.lin@quantumbridgetech.com"},
    {name = "Sohban Ghanbari", email = "sobhan.ghanbari@quantumbridgetech.com"},
    {name = "Luc Robichaud", email = "luc.robichaud@qubridge.io"},
    {name = "Piotr Roztocki", email = "piotr@ki3photonics.com"},
]
classifiers = [
  # How mature is this project? Common values are
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: Apache Software License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
docs = [
    "pymdown-extensions",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocstrings-python",
    "mknotebooks",
    "mkdocs-minify-plugin",
#    "mkdocs-enumerate-headings-plugin",
    "mkdocs-add-number-plugin",
]
all = [
    "jax",
    "optax",
    "ray",
]

[project.urls]
Homepage = "https://github.com/graphiq-dev/graphiq"
Documentation = "https://graphiq.readthedocs.io/en/latest/"
Repository = "https://github.com/graphiq-dev/graphiq.git"
Issues = "https://github.com/graphiq-dev/graphiq/issues"

[tool.setuptools]
py-modules = []